feat: Survey 생성 테스트